# ADCM-Scheduler

./: .gitignore  Dockerfile  asgi.py  celery.py  db.sqlite3  docker-compose.yml  docker_compose_1.yml  manage.py  neo4j.conf  pyproject.toml  requirements.txt  settings.py  urls.py  views.py  wsgi.py
.github/workflows/: codeql-analysis.yml  django.yml  docker-image.yml
IFC_neo4j/: example.py  ifc_explorer.py  nxtoneo4jexplorer.py
adcm-scheduler-excel/: Dockerfile  config.yml  db.sqlite3  manage.py  requirements.txt
adcm-scheduler-excel/myapp/: admin.py  forms.py  models.py  urls.py  views.py
adcm-scheduler-excel/protodjango/: asgi.py  urls.py
adcm-scheduler-excel/registration/: views.py
myapp/: admin.py  config.yml  forms.py  models.py  serializers.py  tasks.py  tests.py  text.txt  urls.py  views.py  yml.py
myapp/data/: 2022-02-07 МОЭК_ЕКС график по смете.xlsx  DIN-Зависимости операции.xlsx  Синара.xlsx
myapp/gantt/: data_collect.py  net_hierarhy.py
myapp/graph_creation/: GESN_graph_creation.py  add.py  add_info.py  add_nodes.xlsx  add_rels.xlsx  config.yml  delete.csv  excel_upload.py  gesn.ipynb  graph_copy.py  historical_graph_creation.py  neo4j_driver.py  neo4jexplorer.py  (+3 more)
neo-historical/: .~lock.2022-02-07.xlsx#  Dockerfile  GESN_graph_creation.py  connection.ipynb  create_group_graph.py  creation_script.sh  din_graph_creation.py  docker-compose.yml  requirements.txt
protodjango/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
registration/: forms.py  views.py
viewer/: Dockerfile  creation_script.sh  exp.py  main.py  requirements.txt
(+109 files in other folders)
