[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "pip>=22.3.1",
    "black>=22.12.0",
    "isort>=5.11.4",
]

[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Nikolai Matiushev", email = "nikolai.matiushev@egao.co.uk"},
]
dependencies = [
    "PyYAML~=6.0",
    "Django==4.1.3",
    "django-crispy-forms~=1.14.0",
    "requests==2.28.1",
    "simplejson==3.18.0",
    "neo4j==5.2.1",
    "pandas~=1.5",
    "numpy==1.23.5",
    "django-bootstrap4==22.2",
    "djangorestframework==3.14.0",
    "openpyxl==3.0.10",
    "httpx~=0.23.0",
    "ifcopenshell~=0.7.0",
    "networkx~=3.0",
    "tqdm~=4.64.1",
    "asgiref~=3.5.2",
    "django-cors-headers~=3.13.0",
    "jmespath>=1.0.1",
]
requires-python = ">=3.10"
license = {text = "MIT"}

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool.black]
line-length = 120
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 120

[tool.pylint]
max-line-length = 120